9-20-2023

================================
Change log notes
================================

Linux v2.36.1 | macOS v0.20.1 | Termux v2.36.1
Fixed bug with the changes I made in the last version. If you typed in the wrong argument, then yt-playlist would not accept anymore arguments.

Linux v2.36 | macOS v0.20 | Termux v2.36
Made a check to make sure there is no yt-playlist running before starting yt-playlist. If you open two yt-playlist, it can cause issues.
Updated the install.sh on Linux/macOS/Termux to check and see if yt-playlist is running before installing.
If you type in the wrong argument you will get an error message now, before yt-playlist would just start. Also you can only type in one argument at a time.

v2.35.4
Updated Termux only.
Updated the Termux install command. It now checks to see if git is installed, if true then skips install. This will speed up the automated install.

v2.35.3
Updated Termux only.
Fixed sed commands in Termux install.sh

v2.35.2
Now at Main menu when cover art notifications enabled it say it's on.
No changes were made to Termux or macOS.

v2.35.1
Fixed issue with help menu Linux version.
No changes were made to Termux or macOS.

v2.35
Changes to Linux only, updated version number on Termux.
Getting cover notifications on Linux takes time, getting 100 results.
3.45 seconds with cover art.
1.71 seconds without cover art.
You will see this when you play an Channel/Playlist/Album for the first time, it has to download all the songs and get the cover art. So I have added a command line argument. 
"yt-playlsit --cover_art"
By default cover art is disabled now. To enable it just run yt-playlist with that argument. It's a trade off, cover art notifications but takes longer to start music/video, or no cover art but 2x faster starting?

v0.18 yt-playlist_macos_beta