@@ -11,7 +11,7 @@ show_audio_dir=$(printf '"%s" \n' "Saved to: ${HOME}/Music/")
 show_video_dir=$(printf '"%s" \n' "Saved to: ${HOME}/Videos/")
 tmp_dir="/tmp"
 yt_video_number="1:100"
-version="v2.36.1"
+version="v2.36.2"
 
 #mainmenu
 
@@ -35,7 +35,7 @@ function main_menu_function ()
         fi
 	if [ -n "$cover_art" ]
 	then
-        echo "Cover art notifications on"
+        echo "Cover art notifications enabled."
         fi
 	if [ -n "$mpv_log_file" ]
 	then
@@ -2272,7 +2272,7 @@ yt_playlist_count=$(echo "$ps_list" | grep yt-playlist | wc -l)
 
 if [[ "$yt_playlist_count" -gt 1 ]]
 then
-echo "Error: yt-playlist is already running, or wrong argument."
+echo "Error: yt-playlist is already running, or incorrect argument."
 exit
 else
 mpv_video_fullscreen_off_function
@@ -3770,8 +3770,11 @@ fi
 	download_audio_function
         exit
         else
-	download_audio_function
+        if [[ "$external_arguments2" = "yt_playlist_audio" ]]
+	then
+        download_audio_function
         exit
+      fi
     fi
   fi
 fi
@@ -3784,10 +3787,14 @@ fi
 	download_video_function
         exit
         else
-	download_video_function
+        if [[ "$external_arguments2" = "yt_playlist_video" ]]
+	then
+        download_video_function
         exit
+    fi
   fi
 fi
+
 
         if [[ "$external_arguments1" = "--play_pause" ]]
 	then
